Revised assignment submission 2

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -18,24 +18,24 @@ data$date <- as.Date(data$date, format = "%Y-%m-%d")
 
 ## Q2. What is mean total number of steps taken per day?
 Task 1 - run sum on steps per day and plot histogram. 
-```{r histogram1, echo = TRUE}
+```{r Q2-1.histogram1, echo = TRUE}
 total <- aggregate(steps ~ date, data = data, FUN = sum)
 hist(total$steps, xlab = "total steps", main = "Histogram of total steps per day", col = "blue")
 ```
 Task 2 - Report mean and median of the total steps (contained in Summary)
-```{r mean_and_median, echo = TRUE}
+```{r Q2-2.mean_and_median, echo = TRUE}
 summary(total$steps)
 ```
 
 ## Q3. What is the average daily activity pattern?
 Task 1 - calculate the average steps per interval across all days and plot them
-```{r avgsteps_interval, echo = TRUE}
+```{r Q3-1.avgsteps_interval, echo = TRUE}
 avgsteps <- aggregate(steps ~ interval, data = data, FUN = mean, rm.na = TRUE)
 plot(avgsteps, type = "l", main = "Average Daily Activity Pattern", xlab = "time", ylab = "average steps")
 ```
 
 Task 2 - Which interval contains the max average stps?
-```{r maxinterval, echo = TRUE}
+```{r Q3-2.maxinterval, echo = TRUE}
 maxavg <- which(avgsteps$steps == max(avgsteps$steps))
 maxinterval <- avgsteps$interval[maxavg]
 ```
@@ -43,13 +43,13 @@ The interval `r maxinterval` has the maximum average number of steps.
 
 ## Q4. Imputing missing values
 Task 1 - Calculate and report the total number of missing values in the dataset
-```{r na_calc, echo = TRUE}
+```{r Q4-1.na_calc, echo = TRUE}
 nas <- sum(!is.na(data$steps))
 ```
 There are `r nas` NAs in steps column.
 
 Task 2 - Devise a strategy for filling in all of the missing values in the dataset. For this task we will use the averages of each 5-min interval.
-```{r fillingNA, echo = TRUE}
+```{r Q4-2.fillingNA, echo = TRUE}
 newdata <- data
 for (i in 1:nrow(newdata)) {
     if (is.na(newdata$steps[i])) {
@@ -60,12 +60,12 @@ for (i in 1:nrow(newdata)) {
 ```
 
 Task 3 - Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day (summary will be presented).
-``` {r newdatahiso, echo = TRUE}
+``` {r Q4-3.newdatahiso, echo = TRUE}
 newtotal <- aggregate(steps ~ date, data = newdata, FUN = sum)
 hist(newtotal$steps, xlab = "total steps", main = "Histogram of total steps per day, with missing data imputed", col = "red")
 ```
 
-``` {r new_mean_and_median, echo = TRUE}
+``` {r Q4-4.new_mean_and_median, echo = TRUE}
 summary(newtotal$steps)
 ```
 
@@ -73,7 +73,7 @@ When NAs are replaced with the average of 5-min intervals, the mean value remain
 
 ## Q5. Are there differences in activity patterns between weekdays and weekends?
 For this task a new variable of factors will be added to the dataset to indicate whether the date is weekend or weekday. Then for plotting, average steps will be calculated per interval in two different factor layers. Lattice package will be used to plot the data.
-```{r weekdays_vs_weekend, echo = TRUE}
+```{r Q5-1.weekdays_vs_weekend, echo = TRUE}
 for (i in 1:nrow(newdata)) {
     if (weekdays(newdata$date[i]) %in% c("Saturday","Sunday")) {
         newdata$daytype[i] <- "weekend"
